jumbotron and header done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,18 +10,37 @@
 
     <title>Tea Cozy</title>
 </head>
+
 <body>
     <!-- Header -->
     <div class="header">
-        <img src="assets/img-tea-cozy-logo.png"  alt="logo" />
+        <img src="assets/img-tea-cozy-logo.png" alt="logo" />
         <h3>Locations</h3>
         <h3>Featured Tea</h3>
         <h3>Mission</h3>
     </div>
 
     <!-- App Container -->
-    <div class="container">
-        <h2>Body</h2>
+    <div class="main">
+        <div class="jumbotron">
+            <div class="crossbar">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
+        </div>
+        <div class="products">
+            <div class="text">
+                <h2>Tea of the Month</h2>
+                <h4>What's Steeping at The Tea Cozy?</h4>
+            </div>
+            <div class="pictures">
+                <img src="./assets/img-berryblitz.jpg" />
+                <img src="./assets/img-spiced-rum.jpg" />
+                <img src="./assets/img-donut.jpg" />
+                <img src="./assets/img-myrtle-ave.jpg" />
+                <img src="./assets/img-bedford-bizarre.jpg" />
+            </div>
+        </div>
     </div>
 
     <!-- Footer -->
@@ -28,4 +48,5 @@
         <h3>Footer</h3>
     </div>
 </body>
+
 </html>
