--- a/index.html
+++ b/index.html
@@ -34,13 +34,54 @@
                 <h4>What's Steeping at The Tea Cozy?</h4>
             </div>
             <div class="pictures">
-                <img src="./assets/img-berryblitz.jpg" />
-                <img src="./assets/img-spiced-rum.jpg" />
-                <img src="./assets/img-donut.jpg" />
-                <img src="./assets/img-myrtle-ave.jpg" />
-                <img src="./assets/img-bedford-bizarre.jpg" />
+                <div class="unit">
+                    <img src="./assets/img-berryblitz.jpg" />
+                    <h3>Fall Berry Blitz Tea</h3>
+                </div>
+                <div class="unit">
+                    <img src="./assets/img-spiced-rum.jpg" />
+                    <h3>Spiced Rum Tea</h3>
+                </div>
+                <div class="unit">
+                    <img src="./assets/img-donut.jpg" />
+                    <h3>Seasonal Donuts</h3>
+                </div>
+                <div class="unit">
+                    <img src="./assets/img-myrtle-ave.jpg" />
+                    <h3>Myrtle Ave Tea</h3>
+                </div>
+                <div class="unit">
+                    <img src="./assets/img-bedford-bizarre.jpg" />
+                    <h3>Bedford Bizarre Tea</h3>
+                </div>
             </div>
         </div>
+        <div class="locations">
+            <div class="content">
+                <h2 class="title">Locations</h2>
+                <div class="cards">
+                    <div id="downtown">
+                        <h3>Downtown</h3>
+                        <p>384 West 4th St</p>
+                        <p>Suite 108</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                    <div id="east-bay">
+                        <h3>East Bayside</h3>
+                        <p>3433 Phisherman's Avenue</p>
+                        <p>(Northwest Corner)</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                    <div id="oakdale">
+                        <h3>Oakdale</h3`>
+                        <p>515 Crescent Avenue</p>
+                        <p>Second Floor</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Footer -->
