Finished footer. Site done

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <p>Portland, Maine</p>
                     </div>
                     <div id="oakdale">
-                        <h3>Oakdale</h3`>
+                        <h3>Oakdale</h3>
                         <p>515 Crescent Avenue</p>
                         <p>Second Floor</p>
                         <p>Portland, Maine</p>
@@ -86,8 +86,15 @@
 
     <!-- Footer -->
     <div class="footer">
-        <h3>Footer</h3>
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+
+        <div class="copyright">
+            <p>copyright The Tea Cozy 2017</p>
+        </div>
     </div>
+    
 </body>
 
 </html>
